<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>ita</artifactId>
        <groupId>com.softserveinc.ita</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>integration-tests</artifactId>

    <properties>
        <spring.version>3.2.8.RELEASE</spring.version>
        <selenium.version>2.42.2</selenium.version>
        <cargo.version>1.4.8</cargo.version>
        <failsafe.version>2.17</failsafe.version>
    </properties>


    <dependencies>
        <!--WebDriver-->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-firefox-driver</artifactId>
            <version>${selenium.version}</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-support</artifactId>
            <version>${selenium.version}</version>
        </dependency>

        <!--MySQL Driver-->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.31</version>
        </dependency>

        <dependency>
            <groupId>com.softserveinc.ita</groupId>
            <artifactId>applicant-manager</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>com.softserveinc.ita</groupId>
            <artifactId>applicants-notification</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>com.softserveinc.ita</groupId>
            <artifactId>chat</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>com.softserveinc.ita</groupId>
            <artifactId>content-repository</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>com.softserveinc.ita</groupId>
            <artifactId>group-manager</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>com.softserveinc.ita</groupId>
            <artifactId>interview</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>com.softserveinc.ita</groupId>
            <artifactId>interview-sheduller</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>com.softserveinc.ita</groupId>
            <artifactId>user-manager</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>com.softserveinc.ita</groupId>
            <artifactId>web-ui</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>war</type>
        </dependency>
    </dependencies>

    <build>
        <finalName>tests</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${failsafe.version}</version>
                <executions>
                    <execution>
                        <id>default</id>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.cargo</groupId>
                <artifactId>cargo-maven2-plugin</artifactId>
                <version>1.4.8</version>
                <configuration>
                    <container>
                        <timeout>1800000</timeout>
                        <containerId>tomcat8x</containerId>
                        <home>G:\test_serv\apache-tomcat-8.0.9-windows-x64\apache-tomcat-8.0.9</home>
                    </container>
                    <configuration>
                        <type>standalone</type>
                        <type>existing</type>
                        <home>G:\test_serv\apache-tomcat-8.0.9-windows-x64\apache-tomcat-8.0.9</home>
                        <properties>
                            <cargo.jvmargs>-Xms128m -Xmx1024m -XX:PermSize=64m -XX:MaxPermSize=256m</cargo.jvmargs>
                        </properties>
                    </configuration>
                    <deployables>
                        <deployable>
                            <groupId>com.softserveinc.ita</groupId>
                            <artifactId>web-ui</artifactId>
                            <type>war</type>
                            <properties>
                                <context>ROOT</context>
                            </properties>
                        </deployable>
                        <deployable>
                            <groupId>com.softserveinc.ita</groupId>
                            <artifactId>applicant-manager</artifactId>
                            <type>war</type>
                            <properties>
                                <context>applicants</context>
                            </properties>
                        </deployable>
                        <deployable>
                            <groupId>com.softserveinc.ita</groupId>
                            <artifactId>applicants-notification</artifactId>
                            <type>war</type>
                            <properties>
                                <context>notification</context>
                            </properties>
                        </deployable>
                        <deployable>
                            <groupId>com.softserveinc.ita</groupId>
                            <artifactId>chat</artifactId>
                            <type>war</type>
                            <properties>
                                <context>chat</context>
                            </properties>
                        </deployable>
                        <deployable>
                            <groupId>com.softserveinc.ita</groupId>
                            <artifactId>content-repository</artifactId>
                            <type>war</type>
                            <properties>
                                <context>repository</context>
                            </properties>
                        </deployable>
                        <deployable>
                            <groupId>com.softserveinc.ita</groupId>
                            <artifactId>group-manager</artifactId>
                            <type>war</type>
                            <properties>
                                <context>groups</context>
                            </properties>
                        </deployable>
                        <deployable>
                            <groupId>com.softserveinc.ita</groupId>
                            <artifactId>interview</artifactId>
                            <type>war</type>
                            <properties>
                                <context>interviews</context>
                            </properties>
                        </deployable>
                        <deployable>
                            <groupId>com.softserveinc.ita</groupId>
                            <artifactId>interview-sheduller</artifactId>
                            <type>war</type>
                            <properties>
                                <context>appointments</context>
                            </properties>
                        </deployable>
                        <deployable>
                            <groupId>com.softserveinc.ita</groupId>
                            <artifactId>user-manager</artifactId>
                            <type>war</type>
                            <properties>
                                <context>users</context>
                            </properties>
                        </deployable>
                    </deployables>
                    <deployer>
                        <type>installed</type>
                    </deployer>
                </configuration>
                <executions>
                    <execution>
                        <id>start</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>start</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>stop</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>stop</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>**/*Tests.java</include>
                    </includes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>